--- a/simpleWebApp/simpleWebApp/src/main/resources/application.properties
+++ b/simpleWebApp/simpleWebApp/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=simpleWebApp
+spring.datasource.url=jdbc:h2:mem:sakibdb
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.username=sakib
+spring.datasource.password=sakib
+
+spring.jpa.show-sql=true
